8136 libnisdb: NULL pointer is used in wrong context Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Robert Mustacchi <rm@joyent.com>