usr/src/lib/libnisdb/db_table.cc
@@ -145,14 +145,14 @@ db_free_list::reset()
 	WRITEUNLOCKV(this, "wu db_free_list::reset");
 }
 
-/* Returns the location of a free entry, or NULL, if there aren't any. */
+/* Returns the location of a free entry, or 0, if there aren't any. */
 entryp
 db_free_list::pop()
 {
-	WRITELOCK(this, NULL, "w db_free_list::pop");
+	WRITELOCK(this, 0, "w db_free_list::pop");
 	if (head == NULL) {
-		WRITEUNLOCK(this, NULL, "wu db_free_list::pop");
-		return (NULL);
+		WRITEUNLOCK(this, 0, "wu db_free_list::pop");
+		return (0);
 	}
 	db_free_entry* old_head = head;
 	entryp found = head->where;
@@ -507,7 +507,7 @@ db_table::first_entry(entryp * where)
 {
 	ASSERTRHELD(table);
 	if (count == 0 || tab == NULL) {  /* empty table */
-		*where = NULL;
+		*where = 0;
 		return (NULL);
 	} else {
 		entryp i;
@@ -519,7 +519,7 @@ db_table::first_entry(entryp * where)
 			}
 		}
 	}
-	*where = NULL;
+	*where = 0;
 	return (NULL);
 }
 
@@ -541,7 +541,7 @@ db_table::next_entry(entryp prev, entryp* newentry)
 			return (tab[i]);
 		}
 	}
-	*newentry = NULL;
+	*newentry = 0;
 	return (NULL);
 }
 
@@ -662,7 +662,7 @@ db_table::add_entry(entry_object *obj, int initialLoad) {
 	 */
 	ASSERTWHELD(table);
 	entryp where = freelist.pop();
-	if (where == NULL) {				/* empty freelist */
+	if (where == 0) {				/* empty freelist */
 		if (last_used >= (table_size-1))	/* full (> is for 0) */
 			grow();
 		where = ++last_used;
@@ -676,7 +676,7 @@ db_table::add_entry(entry_object *obj, int initialLoad) {
 		tab[where] = new_entry(obj);
 		return (where);
 	} else {
-		return (NULL);
+		return (0);
 	}
 }
 
